picture of tuatoe

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--about section -->
         <section id="about-me">
             <div class="row about-me-section">
-                <img src="img/tuatoe.jpg" alt="tuatoe picture">
+                <img src="img/tuatoe.png" alt="tuatoe picture">
                <h2><strong>Hello</strong></h2>
                 <p>
                     I’m a Graphic Designer / Front-end Developer, with focus on optimal efficiency, simplicity and functionality. I’m a self starter, capable of leading creative initiatives without constant guidance and have the ability to remain current with and evangelize innovative technologies, trends and strategies to help promote forward thinking and creativity.
