fix site header nav

--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
     </head>
     <body>
         <!--head section-->
-       <header class="header">
+       <header class="site-header">
            <div class="wrapper">
-                 <nav class="site-header">
-                    <div class="row sticky-nav">
-                        <a href="index.html"><img class="site-logo" src="img/tuatoe-logo.png" width="120px" height="36px" alt="tuatoe daynuah logo"></a>
-                        <ul class="main-nav">
-                            <li><a href="#projects">Projects</a></li>
-                            <li><a href="#about-me">About</a></li>
-                            <li class="open-contact-modal"><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div>
-               </nav>
+                 <div class="site-logo">
+                 <img src="img/tuatoe-logo.png" width="120px" height="36px" alt="tuatoe daynuah logo">
+                </div>
+               <div class="site-header-menu-content">
+                    <nav class="primary-nav primary-nav-pull-right">
+                        <div class="row">
+                            <ul>
+                                <li><a href="#projects">Projects</a></li>
+                                <li><a href="#about-me">About</a></li>
+                                <li class="open-contact-modal"><a href="#contact">Contact</a></li>
+                            </ul>
+                        </div>
+                   </nav>
+               </div>
            </div>
         </header>
         
